--- a/Code_V1.html
+++ b/Code_V1.html
@@ -1,84 +1,78 @@
-
-<!DOCTYPE html>
-<html lang="vi">
+<!DOCTYPE html> <!-- Khai báo HTML5 -->
+<html lang="vi"> <!-- Ngôn ngữ trang: Tiếng Việt -->
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cổng Việc Làm</title>
+    <meta charset="UTF-8"> <!-- Hỗ trợ hiển thị tiếng Việt -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive -->
+    <title>Cổng Việc Làm</title> <!-- Tiêu đề trang -->
+
     <style>
-        body {
+        body { /* Cài đặt chung cho trang */
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background: #f8f9fa;
         }
-        header {
+
+        header { /* Thanh header trên cùng */
             background: #0d6efd;
             color: white;
             padding: 15px 20px;
-            display: flex;
+            display: flex; /* Chia 2 bên: logo - menu */
             justify-content: space-between;
             align-items: center;
         }
-        header nav a {
+
+        header nav a { /* Link menu */
             color: white;
             margin: 0 15px;
             text-decoration: none;
             font-weight: bold;
         }
-        header nav a:hover {
-            text-decoration: underline;
-        }
-        .hero {
+        header nav a:hover { text-decoration: underline; }
+
+        .hero { /* Ảnh nền + ô tìm việc */
             background: url('https://via.placeholder.com/1500x400') no-repeat center;
             background-size: cover;
             color: white;
             text-align: center;
             padding: 80px 20px;
         }
-        .hero h1 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-        .hero input, .hero button {
-            padding: 10px;
-            margin: 5px;
-        }
-        .content {
+        .hero h1 { font-size: 2em; margin-bottom: 20px; }
+        .hero input, .hero button { padding: 10px; margin: 5px; }
+
+        .content { /* Nội dung chính: sidebar + jobs */
             display: flex;
             margin: 20px;
         }
-        .sidebar {
+
+        .sidebar { /* Thanh bên bộ lọc */
             width: 25%;
             padding: 15px;
             background: white;
             border: 1px solid #ddd;
             margin-right: 20px;
         }
-        .jobs {
-            width: 75%;
-        }
-        .job-card {
+
+        .jobs { width: 75%; } /* Phần danh sách việc làm */
+
+        .job-card { /* Thẻ công việc */
             background: white;
             border: 1px solid #ddd;
             padding: 15px;
             margin-bottom: 15px;
         }
-        .job-card h3 {
-            margin: 0;
-        }
+        .job-card h3 { margin: 0; }
         .job-card button {
             margin-top: 10px;
             padding: 8px 12px;
-            background: #198754;
+            background: #198754; /* Nút xanh lá */
             color: white;
             border: none;
             cursor: pointer;
         }
-        .job-card button:hover {
-            background: #145c32;
-        }
-        footer {
+        .job-card button:hover { background: #145c32; }
+
+        footer { /* Chân trang */
             text-align: center;
             padding: 15px;
             background: #0d6efd;
@@ -88,6 +82,7 @@
     </style>
 </head>
 <body>
+    <!-- Header -->
     <header>
         <div><strong>Cổng Việc Làm</strong></div>
         <nav>
@@ -100,14 +95,17 @@
         </nav>
     </header>
 
+    <!-- Hero -->
     <section class="hero" id="trangchu">
         <h1>Tìm công việc mơ ước của bạn ngay hôm nay</h1>
-        <input type="text" placeholder="Nhập chức danh hoặc công ty">
-        <input type="text" placeholder="Địa điểm">
-        <button>Tìm việc làm</button>
+        <input type="text" placeholder="Nhập chức danh hoặc công ty"> <!-- Ô tìm theo từ khóa -->
+        <input type="text" placeholder="Địa điểm"> <!-- Ô tìm theo địa điểm -->
+        <button>Tìm việc làm</button> <!-- Nút tìm kiếm -->
     </section>
 
+    <!-- Nội dung chính -->
     <section class="content" id="vieclam">
+        <!-- Sidebar -->
         <div class="sidebar">
             <h3>Bộ lọc tìm kiếm</h3>
             <p><strong>Loại công việc</strong></p>
@@ -116,27 +114,28 @@
             <label><input type="checkbox"> Thực tập</label><br>
 
             <p><strong>Mức lương</strong></p>
-            <input type="range" min="0" max="100000" step="1000">
+            <input type="range" min="0" max="100000" step="1000"> <!-- Thanh chọn mức lương -->
         </div>
 
+        <!-- Danh sách việc -->
         <div class="jobs">
             <h2>Danh sách việc làm</h2>
 
-            <div class="job-card">
+            <div class="job-card"> <!-- Việc 1 -->
                 <h3>Nhân viên Kinh doanh</h3>
                 <p>Công ty ABC - Hà Nội</p>
                 <p>Lương: 12.000.000 - 15.000.000 VNĐ</p>
                 <button>Chi tiết</button>
             </div>
 
-            <div class="job-card">
+            <div class="job-card"> <!-- Việc 2 -->
                 <h3>Kỹ sư Phần mềm</h3>
                 <p>Công ty XYZ - TP.HCM</p>
                 <p>Lương: 18.000.000 - 25.000.000 VNĐ</p>
                 <button>Chi tiết</button>
             </div>
 
-            <div class="job-card">
+            <div class="job-card"> <!-- Việc 3 -->
                 <h3>Thực tập sinh Marketing</h3>
                 <p>Công ty 123 - Đà Nẵng</p>
                 <p>Lương: Thỏa thuận</p>
@@ -145,6 +144,7 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
         © 2025 - Website hỗ trợ tìm kiếm việc làm
     </footer>
